--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/Devosphere-fr/Devosphere-Core/issues"
   },
-  "homepage": "https://github.com/Devosphere-fr/Devosphere-Core#readme"
+  "homepage": "https://github.com/Devosphere-fr/Devosphere-Core#readme",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
