--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "devosphere-core",
   "version": "1.0.0",
   "description": "**Devosphere-Core** est le **noyau central sécurisé** pour tous les projets Devosphere. Il fournit une base solide pour la création d’API sécurisées, la gestion des utilisateurs et rôles, ainsi que l’intégration facile dans d’autres projets.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,21 @@
   "homepage": "https://github.com/Devosphere-fr/Devosphere-Core#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.12.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.0.0"
   }
 }
