--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^7.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-slow-down": "^1.6.0",
     "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.0",
+    "hpp": "^0.2.3",
     "pg": "^8.12.0",
-    "winston": "^3.14.2"
+    "uuid": "^9.0.1",
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
